--- a/assets/highlight.css
+++ b/assets/highlight.css
@@ -13,24 +13,26 @@
     --dark-hl-5: #9CDCFE;
     --light-hl-6: #A31515;
     --dark-hl-6: #CE9178;
-    --light-hl-7: #800000;
-    --dark-hl-7: #808080;
-    --light-hl-8: #800000;
-    --dark-hl-8: #569CD6;
-    --light-hl-9: #FF0000;
-    --dark-hl-9: #9CDCFE;
-    --light-hl-10: #000000FF;
-    --dark-hl-10: #D4D4D4;
-    --light-hl-11: #098658;
-    --dark-hl-11: #B5CEA8;
-    --light-hl-12: #AF00DB;
-    --dark-hl-12: #C586C0;
-    --light-hl-13: #811F3F;
-    --dark-hl-13: #D16969;
-    --light-hl-14: #EE0000;
-    --dark-hl-14: #DCDCAA;
-    --light-hl-15: #000000;
-    --dark-hl-15: #D7BA7D;
+    --light-hl-7: #008000;
+    --dark-hl-7: #6A9955;
+    --light-hl-8: #AF00DB;
+    --dark-hl-8: #C586C0;
+    --light-hl-9: #800000;
+    --dark-hl-9: #808080;
+    --light-hl-10: #800000;
+    --dark-hl-10: #569CD6;
+    --light-hl-11: #FF0000;
+    --dark-hl-11: #9CDCFE;
+    --light-hl-12: #000000FF;
+    --dark-hl-12: #D4D4D4;
+    --light-hl-13: #098658;
+    --dark-hl-13: #B5CEA8;
+    --light-hl-14: #811F3F;
+    --dark-hl-14: #D16969;
+    --light-hl-15: #EE0000;
+    --dark-hl-15: #DCDCAA;
+    --light-hl-16: #000000;
+    --dark-hl-16: #D7BA7D;
     --light-code-background: #FFFFFF;
     --dark-code-background: #1E1E1E;
 }
@@ -52,6 +54,7 @@
     --hl-13: var(--light-hl-13);
     --hl-14: var(--light-hl-14);
     --hl-15: var(--light-hl-15);
+    --hl-16: var(--light-hl-16);
     --code-background: var(--light-code-background);
 } }
 
@@ -72,6 +75,7 @@
     --hl-13: var(--dark-hl-13);
     --hl-14: var(--dark-hl-14);
     --hl-15: var(--dark-hl-15);
+    --hl-16: var(--dark-hl-16);
     --code-background: var(--dark-code-background);
 } }
 
@@ -92,6 +96,7 @@
     --hl-13: var(--light-hl-13);
     --hl-14: var(--light-hl-14);
     --hl-15: var(--light-hl-15);
+    --hl-16: var(--light-hl-16);
     --code-background: var(--light-code-background);
 }
 
@@ -112,6 +117,7 @@
     --hl-13: var(--dark-hl-13);
     --hl-14: var(--dark-hl-14);
     --hl-15: var(--dark-hl-15);
+    --hl-16: var(--dark-hl-16);
     --code-background: var(--dark-code-background);
 }
 
@@ -131,4 +137,5 @@
 .hl-13 { color: var(--hl-13); }
 .hl-14 { color: var(--hl-14); }
 .hl-15 { color: var(--hl-15); }
+.hl-16 { color: var(--hl-16); }
 pre, code { background: var(--code-background); }
